# langextract-rust

./: .gitignore  CLI_IMPLEMENTATION.md  Cargo.toml  DISTRIBUTION.md  README.md  homebrew-formula.rb  install.sh  langextract_demo.csv  langextract_demo.html  langextract_demo.json  langextract_demo.md
.github/workflows/: ci.yml  release.yml
examples/: EXAMPLES_STATUS.md  PERFORMANCE_TUNING.md  PROVIDER_SYSTEM.md  README.md  README_CHUNKING_UPDATES.md  SPEC.md  academic_paper_test.rs  advanced_chunking_demo.rs  alignment_demo.rs  basic_usage.rs  chunking_comparison.rs  chunking_test.rs  cli_demo.sh  debug_alignment.rs  debug_product_highlighting.rs  e2e_provider_test.rs  langextract_demo.md  multipass_demo.rs  ollama_test.rs  openai_chunking_test.rs  openai_providers_demo.rs  openai_test.rs  product_catalog_test.rs  prompt_template_demo.rs  provider_demo.rs  real_provider_test.rs  retry_demo.rs  sample_product_text.txt  semantic_chunking_example.rs  system_design.txt  test_highlighting.rs  test_providers.sh  validation_demo.rs  visualization_demo.rs
examples/advanced_examples/: multipass_demo.rs  visualization_demo.rs
examples/advanced_examples/advanced_chunking_demo/: README.md  config.yaml  examples.json  input.txt  run.sh
examples/advanced_examples/multipass_demo/: README.md  config.yaml  examples.json  input.txt  run.sh
examples/advanced_examples/visualization_demo/: README.md  config.yaml  examples.json  input.txt  run.sh
examples/basic_examples/: alignment_demo.rs  validation_demo.rs
examples/basic_examples/alignment_demo/: README.md  config.yaml  examples.json  input.txt  run.sh
examples/basic_examples/basic_usage/: README.md  config.yaml  examples.json  input.txt  run.sh
examples/docs/: E2E_TEST_README.md  EXAMPLES_STATUS.md  PIPELINE_README.md  PROVIDER_SYSTEM.md
examples/pipeline/: README.md  pipeline_demo.rs  requirements_pipeline.yaml  sample_requirements.txt
examples/product_catalog/: README.md  config.yaml  examples.json  product_catalog_test.rs  results.json  run.sh  test_product_extraction.sh
examples/raw_outputs/: raw_output_20250815_221645_4fe9f3e7.txt  raw_output_20250815_221648_308b790e.txt  raw_output_20250815_221648_80f6f722.txt  raw_output_20250815_221648_b2432d34.txt  raw_output_20250815_221649_e5efc921.txt  raw_output_20250815_221652_6e0db541.txt  raw_output_20250815_221655_77030bf9.txt  raw_output_20250815_221656_38017141.txt  raw_output_20250815_221656_4662ba3f.txt  raw_output_20250815_221656_b2a3dca8.txt  raw_output_20250815_221659_ae0b45e3.txt  raw_output_20250815_221659_c07f6e4b.txt  raw_output_20250815_221703_0451989a.txt  raw_output_20250815_221704_15303a40.txt  raw_output_20250815_221704_e2297f73.txt  raw_output_20250815_221705_d08e2ce0.txt  raw_output_20250815_221708_54546bed.txt  raw_output_20250815_221708_692a8d49.txt  raw_output_20250815_221717_fb4a622a.txt  raw_output_20250815_221719_5e74048d.txt  raw_output_20250815_221719_f4ecf9ea.txt
examples/scripts/: test_academic_extraction.sh  test_providers.sh
install/: CLI_IMPLEMENTATION.md  homebrew-formula.rb  install.ps1
raw_outputs/: raw_output_20250817_214047_19f76507.txt  raw_output_20250817_220835_68cf807a.txt  raw_output_20250817_220901_ed1408fe.txt
src/: alignment.rs  annotation.rs  chunking.rs  config.rs  data.rs  exceptions.rs  factory.rs  http_client.rs  inference.rs  io.rs  lib.rs  logging.rs  main.rs  multipass.rs  pipeline.rs  progress.rs  prompting.rs  prompting_new.rs  resolver.rs  schema.rs  templates.rs  tokenizer.rs  visualization.rs
src/prompting/: tests.rs
src/providers/: config.rs  mod.rs  universal.rs
src/tokenizer/: tests.rs
(+14 files in other folders)
